# clang-tools-extra

./: .gitignore  CMakeLists.txt  Dockerfile
loop-classify/: CFGBuilder.h  CMakeLists.txt  DefUse.h  Loop.h  LoopClassifier.h  LoopClassify.cpp  LoopMatchers.h  PseudoConstantAnalysis.cpp  PseudoConstantAnalysis.h  compare.py  mkcharts.sh
loop-classify/Classifiers/: Ada.h  AdaArray.h  ArrayIter.h  Branch.h  DataIter.h  IncrementClassifier.h
sloopy/: CFGBuilder.h  CMakeLists.txt  Classifier.h  CmdLine.h  DefUse.h  LinearHelper.h  Loop.h  LoopClassifier.h  LoopClassify.cpp  LoopMatchers.h  PseudoConstantAnalysis.cpp  README  Sloopy.cpp  Time.h  cBench_preprocess.sh  compare.py  mkcharts.sh  test.cpp
sloopy/Classifiers/: Ada.h  AdaArray.h  ArrayIter.h  Branch.h  Cond.h  DataIter.h  EmptyBody.h  GenericIncrementIter.h  IncrementClassifier.h  Influence.h  Master.h  MultiExit.h
sloopy/Classifiers/Increment/: ADT.h  Body.h  Inc.h  (+4 more)
sloopy/test/: test17.c  test2.c  test44.c  test5.c  test56.c  test6.c  test7.c  testarr.c  testcomma.c  testmember.c  testslice.c
sloopy/tools/: compare.py  mkcharts.sh
test/sloopy/: test.c  test16.c  test3.c  test4.c  test41.c  test42.c  test52.c  test55.c  test57.c  test59.c  testarith.c  testcast.c  testdbgmeta.c  testeq.c  testfor.c  testinc.c  testit.c  testlin.c  testmonp.c  testmonp_bench.c  testmonp_domains.c  testmonp_fail.c  testmonp_flow.c  testmonp_neg.c  testmonp_op.c  testmonp_ptr.c  testmonp_stmt.c  testnest.c  testparr.c
unittests/: CMakeLists.txt  Makefile
unittests/sloopy/: CMakeLists.txt  LinearHelperTest.cpp  Makefile
